--- a/lzptc-service-alpha/pom.xml
+++ b/lzptc-service-alpha/pom.xml
@@ -22,6 +22,13 @@
 		</dependency>
 	</dependencies>
 
-
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>docker-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
