--- a/lzptc-zuul-server/pom.xml
+++ b/lzptc-zuul-server/pom.xml
@@ -21,5 +21,12 @@
 		</dependency>
 	</dependencies>
 
-
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>docker-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
