--- a/lzptc-security-server/src/main/resources/bootstrap.properties
+++ b/lzptc-security-server/src/main/resources/bootstrap.properties
@@ -1,5 +1,5 @@
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-spring.application.name=service-alpha
+spring.application.name=security-server
 
 spring.cloud.config.label=master
 
