--- a/lzptc-config-server/src/main/resources/application.properties
+++ b/lzptc-config-server/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 server.port=8887
 
-eureka.client.serviceUrl.defaultZone=http://10.0.0.23:8761/eureka/,http://10.0.0.65:8761/eureka/
+#eureka.client.serviceUrl.defaultZone=http://10.0.0.23:8761/eureka/,http://10.0.0.65:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 spring.application.name=config-server
 
-spring.cloud.config.server.git.uri=https://github.com/z935576013/test01/
-spring.cloud.config.server.git.searchPaths=config
-spring.cloud.config.label=master
+
+spring.profiles.active=native  
+spring.cloud.config.server.native.searchLocations=classpath:/config
+
+#spring.cloud.config.server.git.uri=https://github.com/z935576013/test01/
+#spring.cloud.config.server.git.searchPaths=config
+#spring.cloud.config.label=master
