--- a/lzptc-service-beta/src/main/resources/bootstrap.properties
+++ b/lzptc-service-beta/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
-eureka.client.serviceUrl.defaultZone=http://10.0.0.23:8761/eureka/,http://10.0.0.65:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 spring.application.name=service-beta
 
 spring.cloud.config.label=master
