--- a/lzptc-security-server/src/main/docker/Dockerfile
+++ b/lzptc-security-server/src/main/docker/Dockerfile
@@ -1,3 +1,3 @@
 FROM java
-ADD service-alpha-0.0.1-SNAPSHOT.jar app.jar
-EXPOSE 8762
+ADD lzptc-security-server-0.0.1-SNAPSHOT.jar app.jar
+EXPOSE 8766
