--- a/lzptc-service-alpha/src/main/resources/application.properties
+++ b/lzptc-service-alpha/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 server.port=8762
 
+spring.zipkin.base-url=http://localhost:8767
+#spring.zipkin.locator.discovery.enabled=true
+#spring.zipkin.service.name=zipkin-server
+#spring.zipkin.enabled=true
+spring.sleuth.sampler.percentage=1.0
+
+
 feign.hystrix.enabled=true
