--- a/lzptc-zuul-server/src/main/resources/application.properties
+++ b/lzptc-zuul-server/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.application.name=zuul-server
 #zuul.routes.service-beta.path=/service-beta/**
 #zuul.routes.service-beta.serviceId=service-beta
 
+spring.http.multipart.maxFileSize=50MB
+spring.http.multipart.maxRequestSize=50MB
+
 spring.aop.proxy-target-class=true
 
 security.basic.enabled=false
